--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <title> {{ page.title }} </title>
     {% feed_meta %}
     {% seo %}
+    {% include styles.html %}
 </head>
 <body>
     {% include navigation.html %}
