--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -2,8 +2,8 @@
     <table>
         <thead>
             <tr>
-                <th>Link</th>
-                <th>tags</th>
+                <th>Topic</th>
+                <th>Tags</th>
             </tr>
         </thead>
         {% for post in site.posts %}
