--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,7 @@
-{% assign pages_sorted = site.pages | sort: "order" %}
+<!-- {% assign pages_sorted = site.pages | sort: "order" %}
 {% for page in pages_sorted %}
     <a href="{{ page.url }}">{{ page.title }}</a>
-{% endfor %}
+{% endfor %} -->
+
+<a href="/index.html">Home</a>
+<a href="/about.html">About</a>
