--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,4 @@
-<!-- {% assign pages_sorted = site.pages | sort: "order" %}
+{% assign pages_sorted = site.pages | sort: "order" %}
 {% for page in pages_sorted %}
-    <a href="{{ page.url }}">{{ page.title }}</a>
-{% endfor %} -->
-
-<a href="/index.html">Home</a>
-<a href="/about.html">About</a>
+    <a href="{{ page.url | prepend:site.baseurl }}">{{ page.title }}</a>
+{% endfor %}
