--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -8,7 +8,7 @@
         </thead>
         {% for post in site.posts %}
         <tr>
-            <td><a href="{{ post.url }}">{{ post.title }}</a></td>
+            <td><a href="{{ post.url | prepend:site.baseurl }}">{{ post.title }}</a></td>
             <td>
                 {% for t in post.tags %} {{ t }} &nbsp; {%endfor%}
 
