--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -1,4 +1,27 @@
 <div id='toc'>
+    <script type="text/javascript">
+        toc_srch_now = function () {
+            //this.term = document.getElementById('S').value.toUpperCase();
+            var s = document.getElementById('toc_search').value.toLowerCase();
+            rows = document.getElementById('toc_data').getElementsByTagName('TR');
+            for (var i = 0; i < rows.length; i++) {
+                if (s == "") {
+                    rows[i].style.display = '';
+                } else if (rows[i].innerText.toLowerCase().indexOf(s) != -1) {
+                    rows[i].style.display = '';
+                } else {
+                    rows[i].style.display = 'none';
+                }
+            }
+            this.time = false;
+        };
+
+        clearsrch = function () {
+            document.getElementById('toc_search').value = "";
+        }
+    </script>
+    <input class="big_input" type="text" size="30" maxlength="1000" value="" id="toc_search" onkeyup="toc_srch_now();" />
+    <input type="button" value="Go" onclick="toc_srch_now();" />
     <table>
         <thead>
             <tr>
@@ -6,6 +29,7 @@
                 <th>Tags</th>
             </tr>
         </thead>
+        <tbody id='toc_data'>
         {% for post in site.posts %}
         <tr>
             <td><a href="{{ post.url | prepend:site.baseurl }}">{{ post.title }}</a></td>
@@ -15,5 +39,6 @@
             </td>
         </tr>
         {% endfor %}
+        </tbody>
     </table>
 </div>
