--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     {% include navigation.html %}
-    {{ content }}
 
+    <div class='container'>
+    {{ content }}
+    </div>
     <hr>
     {% include toc.html %}
 </body>
